# NeuroOptAI

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: HALO.md
experiments/: demo_api.py  demo_controller.py  demo_halo.py  demo_halo_controller.py  demo_history_api.py  demo_json_logging.py  demo_priority.py  demo_stagnation.py  demo_status.py  demo_universal_halo.py  history_sample.json
neurooptai/: __init__.py  api.py  cli.py
neurooptai/actions/: early_stopping_action.py  gradient_clipping_action.py  reduce_learning_rate_action.py
neurooptai/controllers/: decision_priority.py  training_controller.py
neurooptai/core/: halo_cost_model.py  training_state.py  universal_halo.py
neurooptai/diagnostics/: overfitting_detector.py  stagnation_detector.py
neurooptai/sensors/: gradient_norm_sensor.py  learning_rate_sensor.py  loss_sensor.py
neurooptai/utils/: json_logger.py
tests/: test_api.py  test_cli.py  test_halo_cost_model.py  test_json_logger.py  test_training_controller.py  test_universal_halo.py
