[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "neurooptai"
version = "0.1.0"
description = "Intelligent autopilot for monitoring and optimizing neural network training."
authors = [
    { name = "Carles X. Vea" }
]
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
neurooptai = "neurooptai.cli:main"

[tool.setuptools.packages.find]
include = ["neurooptai*"]
exclude = ["experiments*"]
